# reef-cli

./: README.md  pyproject.toml
reef-cli/: main.py
reef_cli/: llm_client.py  main.py  notes  system_prompt.py
reef_cli/candidates/: candidate.py  filters.py  manager.py  scorers.py
reef_cli/dep_graph/: __init__.py  node_extractor.py  nodes.py  scan.py
reef_cli/dependencies/: dependency.py  linker.py
reef_cli/extraction/: extractor.py  nodes.py  scan.py  utils.py
reef_cli/llm/: llm_client.py
tests/: test_basic.py
tests/dummy_proj/: main.py
tests/dummy_proj/hello_world/: hello_world.py
tests/dummy_proj/hello_world/hello_atom/: hello_atom.py
tests/dummy_scripts/: basic.py
tests/input/: basic.py
tests/test_dep_graph/: test_dep_graph.py
