[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["reef_cli"]

[project]
dynamic = ["version"]
name = "reef_cli"
requires-python = ">= 3.9"
authors = [
  {name = "Tom Carter", email = "tomcarter017+reef-cli@gmail.com"},
]
readme = "README.md"
description = "CLI for Reef"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "libcst",
    "python-dotenv==1.1.0",
    "langchain-anthropic",
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/reefbot/reef-cli.git"
Issues = "https://github.com/reefbot/reef-cli/issues"
